samples/_failures_safe/1760886105_823105_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b7a8f58.c: In function ‘main’:
./samples/SAFE/__tmp_8b7a8f58.c:155: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_8b7a8f58.c:154:5: error: expected declaration or statement at end of input
  154 |     uint8_t compressed[MAX_OUTPUT_SIZE
      |     ^~~~~~~
